--- a/streampipes-processors-geo-jvm/pom.xml
+++ b/streampipes-processors-geo-jvm/pom.xml
@@ -9,6 +9,11 @@
 
     <artifactId>streampipes-processors-geo-jvm</artifactId>
 
+    <properties>
+        <geotools.version>21-SNAPSHOT</geotools.version>
+        <postgresDriver.version>42.2.5</postgresDriver.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.streampipes</groupId>
@@ -39,6 +44,44 @@
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
             <version>3.9.0</version>
+        </dependency>
+        <!--  ================================ GEOTOOLS ============= -->
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-geometry</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-wkt </artifactId>
+            <version>${geotools.version}</version>
+        </dependency>
+        <!--  ================================ Postgres Driver ============= -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgresDriver.version}</version>
+        </dependency>
+        <!--  ================================ Units ============= -->
+        <dependency>
+            <groupId>javax.measure</groupId>
+            <artifactId>unit-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>tec.units</groupId>
+            <artifactId>unit-ri</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>systems.uom</groupId>
+            <artifactId>systems-common-java8</artifactId>
+            <version>0.7.2</version>
         </dependency>
 
     </dependencies>
