maven streampipes depen repro

--- a/streampipes-processors-geo-jvm/pom.xml
+++ b/streampipes-processors-geo-jvm/pom.xml
@@ -83,6 +83,16 @@
             <artifactId>systems-common-java8</artifactId>
             <version>0.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-wrapper-standalone</artifactId>
+            <version>0.61.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.streampipes</groupId>
+            <artifactId>streampipes-sdk</artifactId>
+            <version>0.61.0</version>
+        </dependency>
 
     </dependencies>
 
