--- a/streampipes-processors-image-processing-jvm/pom.xml
+++ b/streampipes-processors-image-processing-jvm/pom.xml
@@ -75,6 +75,13 @@
             <groupId>org.boofcv</groupId>
             <artifactId>boofcv-core</artifactId>
         </dependency>
+
+        <!-- Dependency convergence -->
+        <dependency>
+            <groupId>org.ddogleg</groupId>
+            <artifactId>ddogleg</artifactId>
+            <version>0.16</version>
+        </dependency>
     </dependencies>
 
     <build>
