--- a/streampipes-processors-enricher-jvm/pom.xml
+++ b/streampipes-processors-enricher-jvm/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <artifactId>streampipes-extensions</artifactId>
         <groupId>org.apache.streampipes</groupId>
-        <version>0.66.0</version>
+        <version>0.66.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
