--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <animal-sniffer-annotations.version>1.17</animal-sniffer-annotations.version>
         <bcprov.version>1.61</bcprov.version>
         <checker-qual.version>2.5.2</checker-qual.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
         <commons-compress.version>1.18</commons-compress.version>
         <commons-text.version>1.8</commons-text.version>
         <errorprone-annotations.version>2.2.0</errorprone-annotations.version>
@@ -120,7 +121,7 @@
         <jsrosbridge.version>0.2.0</jsrosbridge.version>
         <influxdb.java.version>2.14</influxdb.java.version>
         <hadoop.version>3.2.1</hadoop.version>
-        <eclipse.milo.version>0.4.0</eclipse.milo.version>
+        <eclipse.milo.version>0.4.3</eclipse.milo.version>
         <mysql-binlog-connector.version>0.18.1</mysql-binlog-connector.version>
         <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
         <netty.version>4.1.39.Final</netty.version>
@@ -151,6 +152,11 @@
                 <groupId>org.checkerframework</groupId>
                 <artifactId>checker-qual</artifactId>
                 <version>${checker-qual.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${commons-collections4.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -614,6 +620,13 @@
                 <artifactId>streampipes-test-utils</artifactId>
                 <version>${streampipes.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!-- dependency convergence -->
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>2.4.0-b180725.0644</version>
             </dependency>
 
         </dependencies>
