--- a/pom.xml
+++ b/pom.xml
@@ -351,6 +351,11 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.streampipes</groupId>
+                <artifactId>streampipes-connect-container-worker</artifactId>
+                <version>${streampipes.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.streampipes</groupId>
                 <artifactId>streampipes-dataformat-json</artifactId>
                 <version>${streampipes.version}</version>
             </dependency>
