--- a/streampipes-connect-adapters/pom.xml
+++ b/streampipes-connect-adapters/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-extensions</artifactId>
-        <version>0.67.0</version>
+        <version>0.67.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>streampipes-connect-adapters</artifactId>
