--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <module>streampipes-pipeline-elements-all-flink</module>
         <module>streampipes-processors-change-detection-jvm</module>
         <module>streampipes-extensions-all-jvm</module>
+        <module>streampipes-processors-dummy-jvm</module>
     </modules>
 
     <properties>
