--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.streampipes</groupId>
         <artifactId>streampipes-parent</artifactId>
-        <version>0.68.0-SNAPSHOT</version>
+        <version>0.68.0</version>
     </parent>
 
     <artifactId>streampipes-extensions</artifactId>
@@ -64,7 +64,7 @@
     <properties>
         <owasp.check.skip>true</owasp.check.skip>
 
-        <streampipes.version>0.68.0-SNAPSHOT</streampipes.version>
+        <streampipes.version>0.68.0</streampipes.version>
 
         <amqp-client.version>4.1.0</amqp-client.version>
         <animal-sniffer-annotations.version>1.17</animal-sniffer-annotations.version>
